@@ -1,3 +1,10 @@
+2005-12-30  Philip Langdale  <philipl@mail.utexas.edu>
+
+	* gphotofs.c: (gphotofs_readdir) (gphotofs_getattr).
+	Set the uid and gid of files to match those of the
+	process. This is cosmetic as real access control is
+	provided by the allow_other or allow_root options.
+
 2005-12-29  Philip Langdale  <philipl@mail.utexas.edu>
 
         * configure.ac
